ILLEGAL commit on main branch but it slipped the pull request so I will commit this sin; fix overflow on me page on mobile

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -576,6 +576,7 @@ body {
   .me-main {
     width: 100vw;
     margin-top: 260px;
+    overflow-x: clip;
   }
   .me__header {
     margin-top: 120px;
